fixed accoridon and z-index for audio buttons

--- a/src/audio-notes-app/AudioNotes.css
+++ b/src/audio-notes-app/AudioNotes.css
@@ -275,7 +275,6 @@
   background-color: transparent;
   width: 20px;
   margin-left: 8px;
-  z-index: 100;
 }
 
 .audio-notes-group .audio-control-btn {
